# fv3-jedi-data

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
UFSfiles/: RTGSST.1982.2012.monthly.clim.grb  global_glacier.2x2.grb  global_shdmax.0.144x0.144.grb  global_shdmin.0.144x0.144.grb  global_vegfrac.0.144.decpercent.grb
UFSfiles/INPUT/: C48_grid.tile3.nc  oro_data_ls.tile1.nc  oro_data_ss.tile2.nc
testinput_tier_1/: ghcn_20191215_maskout.nc
testinput_tier_1/inputs/GEOSChem_c12/: GEOSChem.DefaultCollection.20210815_0300z.nc4  GEOSChem.geoscf_jedi_sg.c13_2.2_262_40.20210801_0600z.nc4  GEOSChem.geoscf_jedi_sg.c13_2.2_262_40.20210815_0300z.nc4
testinput_tier_1/inputs/GEOSChem_c48/: GEOSChem.DefaultCollection.20210815_0300z.nc4
testinput_tier_1/inputs/UFSfiles/: global_albedo4.1x1.grb  global_mxsnoalb.uariz.t62.192.94.rg.grb  global_slope.1x1.grb  model_configure
testinput_tier_1/inputs/geos_c12/: 20201214_210000.geos.fv_core.res.tile1.nc  20201214_210000.geos.fv_core.res.tile2.nc  20201214_210000.geos.fv_core.res.tile3.nc  20201214_210000.geos.fv_core.res.tile4.nc  20201214_210000.geos.fv_core.res.tile5.nc  20201214_210000.geos.fv_core.res.tile6.nc  20210805_060000.geos.fv_core.res.tile1.nc  20210805_060000.geos.fv_core.res.tile2.nc  20210805_060000.geos.fv_core.res.tile3.nc  20210805_060000.geos.fv_core.res.tile4.nc  20210805_060000.geos.fv_core.res.tile5.nc  20210805_060000.geos.fv_core.res.tile6.nc  20210805_210000.geos.fv_core.res.tile1.nc  20210805_210000.geos.fv_core.res.tile2.nc  20210805_210000.geos.fv_core.res.tile3.nc  20210805_210000.geos.fv_core.res.tile4.nc  20210805_210000.geos.fv_core.res.tile5.nc  20210805_210000.geos.fv_core.res.tile6.nc  abkg.eta.fc.2021-08-05T210000Z.bkg.nc  (+99 more)
testinput_tier_1/obs/: 2020100106_metars_small.nc  GHCN_20191215_maskout.nc  Jason-2-2018-04-15.nc  REMOVE.ME  VIIRS_bias.nc  VIIRS_npp_bias_coeff.nc4  VIIRS_npp_bias_error.nc4  aaod_aeronet_obs_2018041500.nc4  aaod_aeronet_obs_2020121500.nc4  abi_g16_obs_2018041500_m_qc.nc4  abi_g16_obs_2019042306_m.nc4  abi_g16_obs_2019042306_s.nc4  abi_g16_obs_2021080118_m.nc  acftbias_aircraft_2020121418.nc4  aeronet_obs_2018041500.nc4  ahi_himawari8_obs_2019042306_m.nc4  ahi_himawari8_obs_2019042306_s.nc4  aircraft_obs_2018041500_m.nc4  aircraft_obs_2018041500_m_renamed_var.nc4  aircraft_obs_2018041500_s.nc4  aircraft_obs_2020121500.nc4  aircraft_obs_2020121500_m.nc4  aircraft_obs_2020121500_m_renamed_var.nc4  aircraft_obs_2020121500_s.nc4  aircraft_obs_on_lbc_obs_2020121500_m.nc4  airnow-v2-2020090318.nc  airs_aqua_obs_2018041500_m.nc4  airs_aqua_obs_2018041500_m_qc.nc4  airs_aqua_obs_2018041500_m_unittest.nc4  airs_aqua_obs_2020121500_m.nc4  amsr2_gcom-w1_obs_2018041500_geos.nc4  amsr2_gcom-w1_obs_2020121500_m.nc4  amsua_aqua_obs_2018041500_m.nc4  amsua_metop-a_obs_2018041500_m.nc4  amsua_metop-a_obs_2020121500_m.nc4  amsua_metop-b_obs_2018041500_m.nc4  amsua_metop-b_obs_2020121500_m.nc4  amsua_n15_obs_2018041500_m.nc4  amsua_n15_obs_2020121500_m.nc4  amsua_n18_obs_2018041500_m.nc4  (+190 more)
(+1423 files in other folders)
